[package]
name = "webapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
rbdc-mysql={version="0.1"}
rbs = { version = "0.1"}
rbatis = { version = "4.0"}

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }